test/parser/types_error.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    
    // CHECK: [[# @LINE + 1 ]]:19: error: expected expression
    let e: char = 'c;
    let e: char[] = "Hello error;
    // CHECK: [[# @LINE + 1 ]]:1: error: expected ';' after declaration
}